Logging aspect, URLS, api.yaml updated, LoggingAspects, ControllerAdvice
